[tool.poetry]
name = "iydon"
version = "2022.12"
description = "Profile README"
authors = ["Iydon Liang <liangiydon@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
PyGithub = "^1.57"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
